<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.zhoushuyi.mytest4.MainActivity">


    <Button
        android:id="@+id/forgetbutton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="83dp"
        android:text="@string/forget"
        android:clickable="true"
        android:onClick="OnMyResPwdClick"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_inbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useredit"
        app:layout_constraintVertical_bias="0.424"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/sign_inbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="57dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        android:clickable="true"
        android:onClick="OnMyRegistClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/forgetbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/useredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:onClick="OnMyResPwdClick"
        android:text="@string/username"
        android:textColor="#9d8189"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_inbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        tools:ignore="OnClick,RtlCompat" />

    <EditText
        android:id="@+id/passwardedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:onClick="OnMyResPwdClick"
        android:text="@string/passward"
        android:textColor="#9d8189"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/forgetbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useredit"
        app:layout_constraintVertical_bias="0.255"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/sign_inbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwardedit"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="85dp"
        android:layout_marginLeft="84dp" />

</android.support.constraint.ConstraintLayout>
