<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button3"
        android:layout_width="203dp"
        android:layout_height="67dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="100dp"
        android:text="@string/attention"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="91dp"
        android:background="#ffe5d9"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="203dp"
        android:layout_height="67dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="30dp"
        android:text="@string/money"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="91dp"
        android:background="#ffcad4"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="203dp"
        android:layout_height="67dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="30dp"
        android:text="@string/diary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="91dp"
        android:background="#f4acb7"/>
</android.support.constraint.ConstraintLayout>